--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- LANGUAGE DROP DOWN -->
   <!-- <div class="container"> -->
 		<div class="langWrap">
-			<a href="#" language='english' class="active">EN</a>
+			<a href="#" language='english' class="active">ENG</a>
 			<a href="#" language='ukranian'>УКР</a>
       <a href="#" language='russian'>РУС</a>
       <a href="#" language='polish'>POL</a>
