Testing flag emojis 2

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <!-- LANGUAGE SELECTOR -->
   <select class="langWrap" name="languages" id="langSelector" onchange="langChange()">
-    <option language='english' value="english">🇬🇧 ENG</option>
-    <option language='ukranian' value="ukranian">УКР</option>
-    <option language='russian' value="russian">РУС</option>
-    <option language='polish' value="polish">POL</option>
+    <option language='english' value="english"><h1 class="langSelectorEmoji">🇬🇧</h1> <h1 class="langSelectorTxt">ENG</h1></option>
+    <option language='ukranian' value="ukranian"><h1 class="langSelectorEmoji">🇺🇦</h1> <h1 class="langSelectorTxt">УКР</h1></option>
+    <option language='russian' value="russian"><h1 class="langSelectorEmoji">🇷🇺</h1> <h1 class="langSelectorTxt">РУС</h1></option>
+    <option language='polish' value="polish"><h1 class="langSelectorEmoji">🇵🇱</h1> <h1 class="langSelectorTxt">POL</h1></option>
   </select>
 
 		<!-- <div class="langWrap">
