--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
 
   <!-- LANGUAGE SELECTOR -->
-  <select class="langWrap" name="languages" id="langSelector" onchange="langChange()">
-    <option language='english' value="english"><h1 class="langSelectorEmoji">🇬🇧</h1> <h1 class="langSelectorTxt">ENG</h1></option>
-    <option language='ukranian' value="ukranian"><h1 class="langSelectorEmoji">🇺🇦</h1> <h1 class="langSelectorTxt">УКР</h1></option>
-    <option language='russian' value="russian"><h1 class="langSelectorEmoji">🇷🇺</h1> <h1 class="langSelectorTxt">РУС</h1></option>
-    <option language='polish' value="polish"><h1 class="langSelectorEmoji">🇵🇱</h1> <h1 class="langSelectorTxt">POL</h1></option>
+  <select class="langSelector" name="languages" id="langSelector" onchange="langChange()">
+    <option language='english' value="english">🇬🇧 ENG</option>
+    <option language='ukranian' value="ukranian">🇺🇦 УКР</option>
+    <option language='russian' value="russian">🇷🇺 РУС</option>
+    <option language='polish' value="polish">🇵🇱 POL</option>
   </select>
 
 		<!-- <div class="langWrap">
@@ -29,9 +29,18 @@
 		</div> -->
 
 		<div class="content">
-			<h1 class="title">Ukraine Refugee Help</h2>
-      <img class="main_img" src="main_img.jpg" alt="Humanitarian supplies">
-			<p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. Corrupti laudantium repellendus maxime reiciendis, voluptate modi optio sed qui eaque rerum fugiat accusantium, quis sequi eum. Quisquam reiciendis earum voluptatibus, provident ex error debitis dolorem pariatur explicabo quae deserunt aut non sequi facere! Velit sunt incidunt accusantium saepe hic debitis totam, laudantium ab culpa optio dolores nam quo fugiat neque nostrum enim officia quam labore obcaecati?</p>
+      <div class="container_1">
+        <h1 class="title">Ukraine <br> Refugee <br> Help</h1>
+        <!-- <img class="main_img" src="main_img.jpg" alt="Humanitarian supplies"> -->
+        <div class="arrow_container"><a href="#container2"><img class="arrow" src="arrow.png" alt="arrow"></a></div>
+      </div>
+
+      <div class="container_2" id="container2">
+        <h2 class="subtitle">Our Mission</h2>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. Corrupti laudantium repellendus maxime reiciendis, voluptate modi optio sed qui eaque rerum fugiat accusantium, quis sequi eum. Quisquam reiciendis earum voluptatibus, provident ex error debitis dolorem pariatur explicabo quae deserunt aut non sequi facere! Velit sunt incidunt accusantium saepe hic debitis totam, laudantium ab culpa optio dolores nam quo fugiat neque nostrum enim officia quam labore obcaecati?</p>
+      </div>
+			
+			
 		</div>
 	<!-- </div> -->
 
