--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		<div class="content">
       <div class="container_1">
-        <h1 class="title">Ukraine <br> Refugee <br> Help</h1>
+        <h1 class="title">Ukraine Refugee Help</h1>
         <!-- <img class="main_img" src="main_img.jpg" alt="Humanitarian supplies"> -->
         <div class="arrow_container"><a href="#container2"><img class="arrow" src="arrow.png" alt="arrow"></a></div>
       </div>
