Language selector fix 11

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
   <!-- LANGUAGE SELECTOR -->
-  <select class="langSelector" name="languages" id="langSelector" onchange="langChange()">
+  <!-- <select class="langSelector" name="languages" id="langSelector" onchange="langChange()">
     <option language='english' value="english">🇬🇧 ENG</option>
     <option language='ukranian' value="ukranian">🇺🇦 УКР</option>
     <option language='russian' value="russian">🇷🇺 РУС</option>
     <option language='polish' value="polish">🇵🇱 POL</option>
-  </select>
+  </select> -->
 
 		<!-- <div class="langWrap">
 			<a href="#" language='english' class="active">ENG</a>
