--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="content">
       <div class="container_1">
-        <h1 class="title">Ukraine Help List</h1>
+        <h1 class="title">#HelpUkraine</h1>
         <!-- <img class="main_img" src="main_img.jpg" alt="Humanitarian supplies"> -->
         <div class="arrow_container"><a href="#container2"><img class="arrow" src="arrow.png" alt="arrow"></a></div>
       </div>
@@ -38,7 +38,8 @@
         <div class="subtitle">What's going on?</div>
         <div class="description" id="description"> 
           <span class="text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. Corrupti laudantium repellendus maxime reiciendis, voluptate modi optio sed qui eaque rerum fugiat accusantium, quis sequi eum. <br><br> Quisquam reiciendis voluptatibus, provident ex error debitis dolorem pariatur explicabo quae deserunt aut non sequi facere! Velit sunt incidunt accusantium saepe hic debitis totam, laudantium ab culpa optio dolores nam quo fugiat neque nostrum enim officia quam labore obcaecati?
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. Corrupti laudantium repellendus maxime reiciendis, voluptate modi optio sed qui eaque rerum fugiat accusantium, quis sequi eum.</p> 
+            <p>Quisquam reiciendis voluptatibus, provident ex error debitis dolorem pariatur explicabo quae deserunt aut non sequi facere! Velit sunt incidunt accusantium saepe hic debitis totam, laudantium ab culpa optio dolores nam quo fugiat neque nostrum enim officia quam labore obcaecati?</p>
           </span>
           
         </div>
