--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="/peace_pigeon_img.jpg" type="image/icon type">
+  <link rel="icon" href="images/peace_pigeon_img.jpg" type="image/icon type">
   <title>#HelpUkraine</title>
 </head>
 
@@ -31,7 +31,7 @@
       <div class="container_1">
         <h1 class="title">#HelpUkraine</h1>
         <!-- <img class="main_img" src="main_img.jpg" alt="Humanitarian supplies"> -->
-        <div class="arrow_container"><a href="#container2"><img class="arrow" src="arrow.png" alt="arrow"></a></div>
+        <div class="arrow_container"><a href="#container2"><img class="arrow" src="images/arrow.png" alt="arrow"></a></div>
       </div>
 
       <div class="container_2" id="container2">
@@ -68,8 +68,8 @@
   
               <div class="org_info">
                 <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_description"> <span class="org_description_text">“Hope Onlus” is an Italian non-profit organization currently working on the Ukrainian-Polish border. Their mission is to assist refugees fleeing the warzone by providing them shelter, necessary supplies and medicine. </span> </div>
+                <a href="https://www.hopeonlus.org/emergenza-ucraina/"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -87,9 +87,9 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Malteser International</div>
+                <div class="org_description"> <span class="org_description_text">Malteser International is a non-governmental aid agency for humanitarian relief. The organization has been operating in Poland and Romania since the start of the crisis, providing people fleeing Ukraine with vital health assistance, medical supplies, and shelter.</span> </div>
+                <a href="https://www.malteser-international.org/en/donation.html?amount=100&interval=0&fb_item_id=24633"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -107,9 +107,9 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">National Bank of Ukraine</div>
+                <div class="org_description"> <span class="org_description_text">The Ministry of Social Policy is a Ukranian governmental organization that has opened an account for charity contributions from Ukraine and from abroad. The Ministry of Social Policy will channel the raised funds to support Ukraine’s citizens severely affected by the war.</span> </div>
+                <a href="https://www.msp.gov.ua/content/nbu-opens-fundraising-account-for-humanitarian-assistance-to-ukrainians-affected-by-russias-a-ggression.html"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -127,9 +127,9 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Remember Us Org</div>
+                <div class="org_description"> <span class="org_description_text">RememberUs.org  is a non-governmental charity and volunteer organization dedicated to preventing genocide in the world. They provide urgent and immediate humanitarian aid to Ukrainian civilians in critical situations, with a focus on vulnerable individuals who are in warzones.</span> </div>
+                <a href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=B8V57WZMRK6HW"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -147,9 +147,9 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Siepomaga Foundation</div>
+                <div class="org_description"> <span class="org_description_text">The ‘Siepomaga Foundation’ runs the largest charity portal in Poland. They created a fundraiser for the Ukraine crisis. The raised funds are spent on supplies that are being delivered to the people of Ukraine affected by war.</span> </div>
+                <a href="https://www.siepomaga.pl/en/potrzebujacy/ukraina/koszyk/dodaj"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -167,9 +167,9 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Voices of Children</div>
+                <div class="org_description"> <span class="org_description_text">Voices of Children is an organization that provides no-cost psychological support to Ukrainian children who are impacted by armed conflicts like this one. Their services include art therapy, traveling psychologists who specialize in trauma, and assistance programs for individual families.</span> </div>
+                <a href="https://voices.org.ua/en/donat/"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
@@ -187,11 +187,25 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Doctors Without Borders</div>
+                <div class="org_description"> <span class="org_description_text">Doctors Without Borders brings medical humanitarian assistance to victims of conflict, natural disasters, epidemics and healthcare exclusion. They are currently working in Ukraine and bordering regions to provide necessary medical help to people affected by war.</span> </div>
+                <a href="https://donate.doctorswithoutborders.org/secure/donate?_ga=2.14511410.404019399.1649285034-716508568.1648791078"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
+          </div>
+
+          <div class="org_box">
+
+                <div class="org_img">
+                  <div class="img_layer"></div>
+                </div>
+
+              <div class="org_info">
+                <div class="org_title">People In Need</div>
+                <div class="org_description"> <span class="org_description_text"> People in Need has over 100 employees on the ground and has provided assistance to tens of thousands of people in the Czech Republic and Ukraine. The funds will be used to provide humanitarian aid to victims of armed conflict, people on the run, and to protect vulnerable families and individuals.</span> </div>
+                <a href="https://www.peopleinneed.net/donate/once"><div class="org_donate"> Donate </div></a>
+              </div>
+
           </div>
 
           <div class="org_box">
@@ -207,32 +221,54 @@
               <!-- </div> -->
   
               <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
+                <div class="org_title">Caritas</div>
+                <div class="org_description"> <span class="org_description_text">Caritas Internationalis is a confederation of 162 Catholic relief, development and social service organizations. Its work is crucial especially for the most vulnerable people, such as the elderly and children, who receive assistance even in the conflict areas.</span> </div>
+                <a href="https://www.caritas.org/ukraine-appeal-22/"><div class="org_donate"> Donate </div></a>
               </div>
             <!-- </div>   -->
           </div>
 
           <div class="org_box">
-            <!-- <div class="wrap"> -->
-              <!-- <div class="org_img_container">
-                <div class="org_img"></div>
-              </div> -->
 
-              <!-- <div class="org_img_container"> -->
-                <div class="org_img">
-                  <div class="img_layer"></div>
-                </div>
-              <!-- </div> -->
-  
-              <div class="org_info">
-                <div class="org_title"> Hope </div>
-                <div class="org_description"> <span class="org_description_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi veritatis, dicta nesciunt repellat eius labore ea accusantium? Ex nemo vel dolorem cum neque. C </span> </div>
-                <div class="org_donate"> Donate </div>
-              </div>
-            <!-- </div>   -->
+            <div class="org_img">
+              <div class="img_layer"></div>
+            </div>
+
+          <div class="org_info">
+            <div class="org_title">Humanity and Inclusion</div>
+            <div class="org_description"> <span class="org_description_text">Humanity & Inclusion is an international non-governmental organization focusing on providing help to refugees. Teams in Ukraine & Moldova include experts in rehabilitation, logistics, mental health and psychosocial support, basic needs, and the inclusion of persons with disabilities and older people. </span> </div>
+            <a href="https://www.hi-us.org/support-ukraine"><div class="org_donate"> Donate </div></a>
           </div>
+
+      </div>
+
+      <div class="org_box">
+
+          <div class="org_img">
+            <div class="img_layer"></div>
+          </div>
+
+        <div class="org_info">
+          <div class="org_title">Project HOPE</div>
+          <div class="org_description"> <span class="org_description_text">Project HOPE is an international health care non-governmental organization. Within Ukraine, bordering countries like Poland, and worldwide, Project HOPE emergency teams are delivering medical supplies, care and other relief for refugees and displaced children and families.</span> </div>
+          <a href="https://secure.projecthope.org/site/SPageNavigator/2022_02_Ukraine_Response_Web_UNR.html&s_subsrc=bt1"><div class="org_donate"> Donate </div></a>
+        </div>
+
+      </div>
+
+      <div class="org_box">
+
+        <div class="org_img">
+          <div class="img_layer"></div>
+        </div>
+
+      <div class="org_info">
+        <div class="org_title">UN WFP</div>
+        <div class="org_description"> <span class="org_description_text">The United Nations World Food Programme is on the ground right now providing critical food assistance for people fleeing the conflict. With your help, they deliver food directly to Ukrainian people in dire need.</span> </div>
+        <a href="https://secure.wfpusa.org/donate/ukraineconflict-web?ms=UkraineConflict_WEB_LBX"><div class="org_donate"> Donate </div></a>
+      </div>
+
+    </div>
    
         </div>
 
