--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="malteser_img" onClick="handleMalteserClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -101,7 +101,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="nbu_img" onClick="handleNBUClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -121,7 +121,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="remember_us_img" onClick="handleRememberUsClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -141,7 +141,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="siepomaga_img" onClick="handleSiepomagaClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -161,7 +161,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="voc_img" onClick="handleVOCClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -181,7 +181,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="doctors_img" onClick="handleDoctorsClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -196,7 +196,7 @@
 
           <div class="org_box">
 
-                <div class="org_img">
+                <div class="org_img" id="pin_img" onClick="handlePINClick()">
                   <div class="img_layer"></div>
                 </div>
 
@@ -215,7 +215,7 @@
               </div> -->
 
               <!-- <div class="org_img_container"> -->
-                <div class="org_img">
+                <div class="org_img" id="caritas_img" onClick="handleCaritasClick()">
                   <div class="img_layer"></div>
                 </div>
               <!-- </div> -->
@@ -230,7 +230,7 @@
 
           <div class="org_box">
 
-            <div class="org_img">
+            <div class="org_img" id="hai_img" onClick="handleHAIClick()">
               <div class="img_layer"></div>
             </div>
 
@@ -244,7 +244,7 @@
 
       <div class="org_box">
 
-          <div class="org_img">
+          <div class="org_img" id="project_hope_img" onClick="handleProjectHopeClick()">
             <div class="img_layer"></div>
           </div>
 
@@ -258,7 +258,7 @@
 
       <div class="org_box">
 
-        <div class="org_img">
+        <div class="org_img" id="unwfp_img" onClick="handleUNWFPClick()">
           <div class="img_layer"></div>
         </div>
 
