--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
       </div> 
 
       <div class="container_3" id="container3">
+
+        <div class="org_box">
+
+          <div class="org_img" id="siepomaga_img" onClick="handleSiepomagaClick()">
+            <div class="img_layer"></div>
+          </div>
+
+        <div class="org_info">
+          <div class="org_title">Siepomaga Foundation</div>
+          <div class="org_description"> <span class="org_description_text">The ‘Siepomaga Foundation’ runs the largest charity portal in Poland. They created a fundraiser for the Ukraine crisis. The raised funds are spent on supplies that are being delivered to the people of Ukraine affected by war.</span> </div>
+          <a href="https://www.siepomaga.pl/en/potrzebujacy/ukraina/koszyk/dodaj"><div class="org_donate"> Donate </div></a>
+        </div>
+
+    </div>
+
+    <div class="org_box">
+
+      <div class="org_img" id="unwfp_img" onClick="handleUNWFPClick()">
+        <div class="img_layer"></div>
+      </div>
+
+    <div class="org_info">
+      <div class="org_title">UN WFP</div>
+      <div class="org_description"> <span class="org_description_text">The United Nations World Food Programme is on the ground right now providing critical food assistance for people fleeing the conflict. With your help, they deliver food directly to Ukrainian people in dire need.</span> </div>
+      <a href="https://secure.wfpusa.org/donate/ukraineconflict-web?ms=UkraineConflict_WEB_LBX"><div class="org_donate"> Donate </div></a>
+    </div>
+
+  </div>
       
           <div class="org_box">
 
@@ -53,23 +81,9 @@
                 </div>
   
               <div class="org_info">
-                <div class="org_title">National Bank of Ukraine</div>
+                <div class="org_title">Ministry of Social Policy</div>
                 <div class="org_description"> <span class="org_description_text">The Ministry of Social Policy is a Ukranian governmental organization that has opened an account for charity contributions from Ukraine and from abroad. The Ministry of Social Policy will channel the raised funds to support Ukraine’s citizens severely affected by the war.</span> </div>
                 <a href="https://www.msp.gov.ua/content/nbu-opens-fundraising-account-for-humanitarian-assistance-to-ukrainians-affected-by-russias-a-ggression.html"><div class="org_donate"> Donate </div></a>
-              </div>
-
-          </div>
-
-          <div class="org_box">
-
-                <div class="org_img" id="siepomaga_img" onClick="handleSiepomagaClick()">
-                  <div class="img_layer"></div>
-                </div>
-  
-              <div class="org_info">
-                <div class="org_title">Siepomaga Foundation</div>
-                <div class="org_description"> <span class="org_description_text">The ‘Siepomaga Foundation’ runs the largest charity portal in Poland. They created a fundraiser for the Ukraine crisis. The raised funds are spent on supplies that are being delivered to the people of Ukraine affected by war.</span> </div>
-                <a href="https://www.siepomaga.pl/en/potrzebujacy/ukraina/koszyk/dodaj"><div class="org_donate"> Donate </div></a>
               </div>
 
           </div>
@@ -173,20 +187,6 @@
         </div>
 
       </div>
-
-      <div class="org_box">
-
-        <div class="org_img" id="unwfp_img" onClick="handleUNWFPClick()">
-          <div class="img_layer"></div>
-        </div>
-
-      <div class="org_info">
-        <div class="org_title">UN WFP</div>
-        <div class="org_description"> <span class="org_description_text">The United Nations World Food Programme is on the ground right now providing critical food assistance for people fleeing the conflict. With your help, they deliver food directly to Ukrainian people in dire need.</span> </div>
-        <a href="https://secure.wfpusa.org/donate/ukraineconflict-web?ms=UkraineConflict_WEB_LBX"><div class="org_donate"> Donate </div></a>
-      </div>
-
-    </div>
    
         </div>
 
