--- a/stats/index.html
+++ b/stats/index.html
@@ -12,9 +12,10 @@
     }
     
     div {
-      background-color: blue;
-      width: 100px;
-      height: 100px;
+      /* background-color: blue; */
+      /* width: 100px; */
+      /* height: 100px; */
+      font-size: 40px;
     }
     </style>
 
