--- a/index.html
+++ b/index.html
@@ -162,6 +162,20 @@
 
           <div class="org_box">
 
+            <div class="org_img" id="cow_img" onClick="handleCOWClick()">
+              <div class="img_layer"></div>
+            </div>
+
+          <div class="org_info">
+            <div class="org_title">Children of War Foundation</div>
+            <div class="org_description"> <span class="org_description_text"> Children of War Foundation is a non-profit organization providing necessary mdecial help and supplies to children affected by war. They are currently working with Dubrobut Hospital Network and polyclinics in Kiev, as well as their affiliate healthcare professionals currently based in L'viv. </span> </div>
+            <a href="https://www.paypal.com/pools/c/8JjJWaCyF7"><div class="org_donate"> Donate </div></a>
+          </div>
+
+      </div>
+
+          <div class="org_box">
+
             <div class="org_img" id="hai_img" onClick="handleHAIClick()">
               <div class="img_layer"></div>
             </div>
